--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "TURBO_TELEMETRY_DISABLED=1 turbo build",
     "dev": "TURBO_TELEMETRY_DISABLED=1 turbo dev",
     "lint": "TURBO_TELEMETRY_DISABLED=1 turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
+    "format:fix": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
     "prettier": "^3.2.5",
