--- a/packages/diff/package.json
+++ b/packages/diff/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint . --max-warnings 0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@arcanejs/eslint-config": "workspace:*",
+    "@arcanejs/typescript-config": "workspace:*",
     "@types/node": "^20.11.24",
     "@types/eslint": "^8.56.5",
     "@types/react": "^18.2.61",
