build diff package with tsup

--- a/packages/diff/package.json
+++ b/packages/diff/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": false,
   "exports": {
-    ".": "./src/index.ts"
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
   },
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "build": "tsup",
+    "dev": "tsup --watch"
   },
   "devDependencies": {
     "@arcanejs/eslint-config": "workspace:*",
