--- a/packages/diff/package.json
+++ b/packages/diff/package.json
@@ -3,22 +3,24 @@
   "version": "0.1.0",
   "private": false,
   "exports": {
-    ".": "./src/index.ts"
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
   },
   "scripts": {
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "build": "tsup",
+    "dev": "tsup --watch"
   },
   "devDependencies": {
     "@arcanejs/eslint-config": "workspace:*",
     "@arcanejs/typescript-config": "workspace:*",
-    "@types/node": "^20.11.24",
     "@types/eslint": "^8.56.5",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
+    "@types/node": "^20.11.24",
     "eslint": "^8.57.0",
+    "tsup": "^8.1.0",
     "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "react": "^18.2.0"
   }
 }
