--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,4 +29,6 @@ jobs:
       - run: pnpm install --frozen-lockfile
       - run: pnpm build
       - run: pnpm changeset publish
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: git push --follow-tags
