--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -36,4 +36,4 @@ jobs:
       - run: pnpm changeset publish
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - run: git push --follow-tags
+      - run: git push origin --tags
