--- a/packages/diff/package.json
+++ b/packages/diff/package.json
@@ -30,14 +30,19 @@
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "build": "tsup",
-    "dev": "tsup --watch"
+    "dev": "tsup --watch",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@arcanejs/eslint-config": "workspace:*",
     "@arcanejs/typescript-config": "workspace:*",
     "@types/eslint": "^8.56.5",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
     "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.0",
     "tsup": "^8.1.0",
     "typescript": "^5.3.3"
   },
