--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,11 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "test": {},
+    "test:watch": {
+      "cache": false,
+      "persistent": true
     }
   }
 }
