--- a/.github/workflows/release-and-publish.yaml
+++ b/.github/workflows/release-and-publish.yaml
@@ -33,6 +33,9 @@ jobs:
           key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
       - run: pnpm install --frozen-lockfile
       - run: pnpm build
+      - name: Configure PNPM to use token
+        run:
+          echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" >> .npmrc
       - name: Run Changeset Workflow
         uses: changesets/action@aba318e9165b45b7948c60273e0b72fce0a64eb9 # v1.4.7
         env:
