Use nonstrict version for workspace packages
This will allow users to independently upgrade
arcanejs packages if we stick with semver best
practices.

--- a/packages/diff/package.json
+++ b/packages/diff/package.json
@@ -45,8 +45,8 @@
     "test:watch": "jest --watch"
   },
   "devDependencies": {
-    "@arcanejs/eslint-config": "workspace:*",
-    "@arcanejs/typescript-config": "workspace:*",
+    "@arcanejs/eslint-config": "workspace:^",
+    "@arcanejs/typescript-config": "workspace:^",
     "@types/eslint": "^8.56.5",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
