--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@arcanejs/diff": "workspace:*",
+    "@arcanejs/diff": "workspace:^",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "next": "15.0.0-rc.0"
   },
   "devDependencies": {
-    "@arcanejs/eslint-config": "workspace:*",
-    "@arcanejs/typescript-config": "workspace:*",
+    "@arcanejs/eslint-config": "workspace:^",
+    "@arcanejs/typescript-config": "workspace:^",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
