Export sourcemaps for library types
This will ease in development by allowing for the
typescript language server (and IDEs / editors) to
have jump-to-definition for the original source
files for cross-package usage.

We should be able to avoid non-existent JS modules
from being importable by virtue of having exports
specified in the package.json files.

--- a/packages/diff/package.json
+++ b/packages/diff/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "build": "tsup",
+    "build": "tsup && tsc --emitDeclarationOnly --declaration",
     "dev": "tsup --watch",
     "test": "jest",
     "test:watch": "jest --watch"
