--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "build": "tsup",
+    "build": "tsup && tsc --emitDeclarationOnly --declaration",
     "dev": "tsup --watch"
   },
   "devDependencies": {
