Switch to using custom conditions for local imports
Rather than require building type definitions with
sourcemaps to enable jump-to-definition between
packages in the monorepo, switch to using custom
conditions for local imports, to resolve the
typescript modules directly.

As a result, it's not necessary to run a build
to have changes reflected in editors,
or to even run the example projects,
as with tsx they can be imported directly
inside node.

This follows the guide outlined here:
https://colinhacks.com/essays/live-types-typescript-monorepo

--- a/examples/core/package.json
+++ b/examples/core/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "build": "tsc --noEmit",
-    "start": "ts-node src"
+    "start": "node --import=tsx --conditions=@arcanejs/source src"
   },
   "devDependencies": {
     "@arcanejs/eslint-config": "workspace:^",
@@ -15,8 +15,10 @@
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
     "eslint": "^8.57.0",
-    "ts-node": "^10.9.2",
     "tsup": "^8.1.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "tsx": "^4.19.1"
   }
 }
