--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -18,6 +18,7 @@
   },
   "exports": {
     ".": {
+      "@arcanejs/source": "./src/index.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
