Switch to default tsup definitions output
Given that local development has now switched to
using custom conditions, it's no longer necessary
for definitions modules to have sourcmaps,
and in fact most usage of these sourcemaps won't
work as the original source files will not be
present at that time.

So this change introduced in #31 can be reverted.

--- a/packages/diff/package.json
+++ b/packages/diff/package.json
@@ -22,19 +22,16 @@
   },
   "exports": {
     ".": {
-      "@arcanejs/source": "./src/index.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
     "./diff": {
-      "@arcanejs/source": "./src/diff.ts",
       "import": "./dist/diff.mjs",
       "require": "./dist/diff.js",
       "types": "./dist/diff.d.ts"
     },
     "./patch": {
-      "@arcanejs/source": "./src/patch.ts",
       "import": "./dist/patch.mjs",
       "require": "./dist/patch.js",
       "types": "./dist/patch.d.ts"
@@ -42,7 +39,7 @@
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "build": "tsup && tsc --emitDeclarationOnly --declaration",
+    "build": "tsup",
     "dev": "tsup --watch",
     "test": "jest",
     "test:watch": "jest --watch"
