Switch to using custom conditions for local imports (#32)
* Switch to using custom conditions for local imports

Rather than require building type definitions with
sourcemaps to enable jump-to-definition between
packages in the monorepo, switch to using custom
conditions for local imports, to resolve the
typescript modules directly.

As a result, it's not necessary to run a build
to have changes reflected in editors,
or to even run the example projects,
as with tsx they can be imported directly
inside node.

This follows the guide outlined here:
https://colinhacks.com/essays/live-types-typescript-monorepo

* Switch to default tsup definitions output

Given that local development has now switched to
using custom conditions, it's no longer necessary
for definitions modules to have sourcmaps,
and in fact most usage of these sourcemaps won't
work as the original source files will not be
present at that time.

So this change introduced in #31 can be reverted.

--- a/packages/diff/package.json
+++ b/packages/diff/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "build": "tsup && tsc --emitDeclarationOnly --declaration",
+    "build": "tsup",
     "dev": "tsup --watch",
     "test": "jest",
     "test:watch": "jest --watch"
