--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -26,20 +26,35 @@
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "build": "tsup",
-    "dev": "tsup --watch"
+    "build": "pnpm build:backend && pnpm build:frontend",
+    "build:backend": "tsup",
+    "build:frontend": "esbuild src/frontend/frontend.ts --bundle --sourcemap --outfile=dist/frontend.js",
+    "dev": "pnpm dev:frontend",
+    "dev:frontend": "pnpm build:frontend --watch"
   },
   "devDependencies": {
     "@arcanejs/eslint-config": "workspace:^",
     "@arcanejs/typescript-config": "workspace:^",
     "@types/eslint": "^8.56.5",
+    "@types/express": "^5.0.0",
+    "@types/lodash": "^4.17.10",
     "@types/node": "^20.11.24",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/ws": "^8.5.12",
+    "esbuild": "^0.24.0",
     "eslint": "^8.57.0",
+    "react": "19.0.0-rc-f994737d14-20240522",
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "styled-components": "^6.1.13",
     "tsup": "^8.1.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@arcanejs/diff": "workspace:^"
+    "@arcanejs/diff": "workspace:^",
+    "express": "^4.21.1",
+    "lodash": "^4.17.21",
+    "ws": "^8.18.0"
   },
   "files": [
     "dist"
