--- a/packages/toolkit/tsconfig.json
+++ b/packages/toolkit/tsconfig.json
@@ -4,5 +4,10 @@
     "outDir": "dist"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "src/frontend"],
+  "references": [
+    {
+      "path": "./tsconfig.frontend.json"
+    }
+  ]
 }
