Display prettier differences when failing in CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,3 +25,8 @@ jobs:
       - run: pnpm build
       - run: pnpm lint
       - run: pnpm format:check
+        id: format_check
+        continue-on-error: true
+      - name: 'output prettier changes if failed'
+        if: steps.format_check.outcome == 'failure'
+        run: pnpm format:fix && git diff
