--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -57,6 +57,7 @@
     "@arcanejs/diff": "workspace:^",
     "express": "^4.21.1",
     "lodash": "^4.17.21",
+    "material-symbols": "^0.25.0",
     "ws": "^8.18.0"
   },
   "files": [
