--- a/packages/react-toolkit/package.json
+++ b/packages/react-toolkit/package.json
@@ -37,12 +37,15 @@
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
     "@types/react": "^18",
+    "@types/react-reconciler": "^0.28.8",
     "eslint": "^8.57.0",
+    "react-reconciler": "^0.28.0",
     "tsup": "^8.1.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@arcanejs/toolkit": "workspace:^"
+    "@arcanejs/toolkit": "workspace:^",
+    "react": "^18"
   },
   "files": [
     "dist"
