--- a/packages/react-toolkit/package.json
+++ b/packages/react-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arcanejs/react-toolkit",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": false,
   "description": "Build web-accessible control interfaces for your long-running Node.js processes",
   "keywords": [
@@ -48,7 +48,8 @@
     "react": "^18"
   },
   "files": [
-    "dist"
+    "dist",
+    "docs"
   ],
   "publishConfig": {
     "access": "public"
