--- a/packages/react-toolkit/package.json
+++ b/packages/react-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arcanejs/react-toolkit",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": false,
   "description": "Build web-accessible control interfaces for your long-running Node.js processes",
   "keywords": [
@@ -48,8 +48,7 @@
     "react": "^18"
   },
   "files": [
-    "dist",
-    "docs"
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
