--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@arcanejs/diff": "workspace:^",
+    "@arcanejs/protocol": "workspace:^",
+    "@arcanejs/toolkit": "workspace:^",
+    "@arcanejs/toolkit-frontend": "workspace:^",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "next": "15.0.0-rc.0"
+    "next": "15.0.0-rc.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@arcanejs/eslint-config": "workspace:^",
