Use commitUsingApi in changesets action

--- a/.github/workflows/release-and-publish.yaml
+++ b/.github/workflows/release-and-publish.yaml
@@ -43,4 +43,4 @@ jobs:
         with:
           publish: pnpm changeset publish
           createGithubReleases: true
-          # commitUsingApi: true
+          commitUsingApi: true
