--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -9,6 +9,7 @@
     "start": "node --import=tsx --conditions=@arcanejs/source",
     "start:button-adder": "pnpm start src/button-adder",
     "start:counter": "pnpm start src/counter",
+    "start:data-file": "pnpm start src/data-file",
     "start:data-files": "pnpm start src/data-files",
     "start:editable-group-title": "pnpm start src/editable-group-title",
     "start:readme": "pnpm start src/readme",
