--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -9,6 +9,8 @@
     "start": "node --import=tsx --conditions=@arcanejs/source",
     "start:button-adder": "pnpm start src/button-adder",
     "start:counter": "pnpm start src/counter",
+    "start:data-file": "pnpm start src/data-file",
+    "start:data-files": "pnpm start src/data-files",
     "start:editable-group-title": "pnpm start src/editable-group-title",
     "start:readme": "pnpm start src/readme",
     "start:reorder-elements": "pnpm start src/reorder-elements",
@@ -25,9 +27,10 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@arcanejs/toolkit": "workspace:^",
     "@arcanejs/react-toolkit": "workspace:^",
+    "@arcanejs/toolkit": "workspace:^",
     "react": "^18",
-    "tsx": "^4.19.1"
+    "tsx": "^4.19.1",
+    "zod": "^3.23.8"
   }
 }
