Remove console logs and expose logging interface
Avoid using console.log in the codebase,
instead expose the ability for the user to pass-in a logger that is
then used throughout the toolkit.

--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -17,6 +17,10 @@
       "@arcanejs/source": "./src/index.ts",
       "types": "./dist/index.d.ts"
     },
+    "./logging": {
+      "@arcanejs/source": "./src/logging.ts",
+      "types": "./dist/logging.d.ts"
+    },
     "./styles": {
       "@arcanejs/source": "./src/styles.ts",
       "types": "./dist/styles.d.ts"
