--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "@arcanejs/react-toolkit": "workspace:^",
     "@arcanejs/toolkit": "workspace:^",
+    "pino": "^9.5.0",
+    "pino-pretty": "^11.3.0",
     "react": "^18",
     "tsx": "^4.19.1",
     "zod": "^3.23.8"
