--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arcanejs/examples-react",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "private": true,
   "description": "Example app using toolkit",
   "scripts": {
@@ -29,6 +29,8 @@
   "dependencies": {
     "@arcanejs/react-toolkit": "workspace:^",
     "@arcanejs/toolkit": "workspace:^",
+    "pino": "^9.5.0",
+    "pino-pretty": "^11.3.0",
     "react": "^18",
     "tsx": "^4.19.1",
     "zod": "^3.23.8"
