--- a/packages/diff/package.json
+++ b/packages/diff/package.json
@@ -38,11 +38,12 @@
       "import": "./dist/patch.mjs",
       "require": "./dist/patch.js",
       "types": "./dist/patch.d.ts"
-    }
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "build": "tsup",
+    "build": "rm -rf dist && tsup && check-export-map",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -52,6 +53,7 @@
     "@types/eslint": "^8.56.5",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
+    "check-export-map": "^1.3.1",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.0",
