--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -24,11 +24,12 @@
     "./styles": {
       "@arcanejs/source": "./src/styles.ts",
       "types": "./dist/styles.d.ts"
-    }
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc && check-export-map"
   },
   "devDependencies": {
     "@arcanejs/diff": "workspace:^",
@@ -36,6 +37,7 @@
     "@arcanejs/typescript-config": "workspace:^",
     "@types/eslint": "^8.56.5",
     "@types/jest": "^29.5.12",
+    "check-export-map": "^1.3.1",
     "eslint": "^8.57.0",
     "typescript": "^5.3.3"
   },
