--- a/packages/react-toolkit/package.json
+++ b/packages/react-toolkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arcanejs/react-toolkit",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "private": false,
   "description": "Build web-accessible control interfaces for your long-running Node.js processes",
   "keywords": [
@@ -36,11 +36,12 @@
       "import": "./dist/logging.mjs",
       "require": "./dist/logging.js",
       "types": "./dist/logging.d.ts"
-    }
+    },
+    "./package.json": "./package.json"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "build": "tsup",
+    "build": "rm -rf dist && tsup && check-export-map",
     "dev": "tsup --watch"
   },
   "devDependencies": {
@@ -51,6 +52,7 @@
     "@types/node": "^20.11.24",
     "@types/react": "^18",
     "@types/react-reconciler": "^0.28.8",
+    "check-export-map": "^1.3.1",
     "eslint": "^8.57.0",
     "tsup": "^8.1.0",
     "typescript": "^5.3.3",
