--- a/packages/react-toolkit/package.json
+++ b/packages/react-toolkit/package.json
@@ -31,6 +31,12 @@
       "import": "./dist/colors.mjs",
       "require": "./dist/colors.js"
     },
+    "./custom": {
+      "@arcanejs/source": "./src/custom.ts",
+      "types": "./dist/custom.d.ts",
+      "import": "./dist/custom.mjs",
+      "require": "./dist/custom.js"
+    },
     "./data": {
       "@arcanejs/source": "./src/data.tsx",
       "types": "./dist/data.d.ts",
