--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -19,75 +19,75 @@
   "exports": {
     ".": {
       "@arcanejs/source": "./src/index.ts",
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     },
     "./components/base": {
       "@arcanejs/source": "./src/backend/components/base.ts",
+      "types": "./dist/backend/components/base.d.ts",
       "import": "./dist/backend/components/base.mjs",
-      "require": "./dist/backend/components/base.js",
-      "types": "./dist/backend/components/base.d.ts"
+      "require": "./dist/backend/components/base.js"
     },
     "./components/button": {
       "@arcanejs/source": "./src/backend/components/button.ts",
+      "types": "./dist/backend/components/button.d.ts",
       "import": "./dist/backend/components/button.mjs",
-      "require": "./dist/backend/components/button.js",
-      "types": "./dist/backend/components/button.d.ts"
+      "require": "./dist/backend/components/button.js"
     },
     "./components/group": {
       "@arcanejs/source": "./src/backend/components/group.ts",
+      "types": "./dist/backend/components/group.d.ts",
       "import": "./dist/backend/components/group.mjs",
-      "require": "./dist/backend/components/group.js",
-      "types": "./dist/backend/components/group.d.ts"
+      "require": "./dist/backend/components/group.js"
     },
     "./components/label": {
       "@arcanejs/source": "./src/backend/components/label.ts",
+      "types": "./dist/backend/components/label.d.ts",
       "import": "./dist/backend/components/label.mjs",
-      "require": "./dist/backend/components/label.js",
-      "types": "./dist/backend/components/label.d.ts"
+      "require": "./dist/backend/components/label.js"
     },
     "./components/rect": {
       "@arcanejs/source": "./src/backend/components/rect.ts",
+      "types": "./dist/backend/components/rect.d.ts",
       "import": "./dist/backend/components/rect.mjs",
-      "require": "./dist/backend/components/rect.js",
-      "types": "./dist/backend/components/rect.d.ts"
+      "require": "./dist/backend/components/rect.js"
     },
     "./components/slider-button": {
       "@arcanejs/source": "./src/backend/components/slider-button.ts",
+      "types": "./dist/backend/components/slider-button.d.ts",
       "import": "./dist/backend/components/slider-button.mjs",
-      "require": "./dist/backend/components/slider-button.js",
-      "types": "./dist/backend/components/slider-button.d.ts"
+      "require": "./dist/backend/components/slider-button.js"
     },
     "./components/switch": {
       "@arcanejs/source": "./src/backend/components/switch.ts",
+      "types": "./dist/backend/components/switch.d.ts",
       "import": "./dist/backend/components/switch.mjs",
-      "require": "./dist/backend/components/switch.js",
-      "types": "./dist/backend/components/switch.d.ts"
+      "require": "./dist/backend/components/switch.js"
     },
     "./components/tabs": {
       "@arcanejs/source": "./src/backend/components/tabs.ts",
+      "types": "./dist/backend/components/tabs.d.ts",
       "import": "./dist/backend/components/tabs.mjs",
-      "require": "./dist/backend/components/tabs.js",
-      "types": "./dist/backend/components/tabs.d.ts"
+      "require": "./dist/backend/components/tabs.js"
     },
     "./components/text-input": {
       "@arcanejs/source": "./src/backend/components/text-input.ts",
+      "types": "./dist/backend/components/text-input.d.ts",
       "import": "./dist/backend/components/text-input.mjs",
-      "require": "./dist/backend/components/text-input.js",
-      "types": "./dist/backend/components/text-input.d.ts"
+      "require": "./dist/backend/components/text-input.js"
     },
     "./components/timeline": {
       "@arcanejs/source": "./src/backend/components/timeline.ts",
+      "types": "./dist/backend/components/timeline.d.ts",
       "import": "./dist/backend/components/timeline.mjs",
-      "require": "./dist/backend/components/timeline.js",
-      "types": "./dist/backend/components/timeline.d.ts"
+      "require": "./dist/backend/components/timeline.js"
     },
     "./util": {
       "@arcanejs/source": "./src/backend/util/index.ts",
+      "types": "./dist/backend/util/index.d.ts",
       "import": "./dist/backend/util/index.mjs",
-      "require": "./dist/backend/util/index.js",
-      "types": "./dist/backend/util/index.d.ts"
+      "require": "./dist/backend/util/index.js"
     },
     "./package.json": "./package.json"
   },
