Allow custom frontend entrypoints to be used
To allow for custom components to be fully end-to-end usable,
it needs to be possible for users of this library to load their frontend
code into the browser, and register their renderer with arcane js.

To facilitate this, when starting the Toolkit,
a custom entrypoint.js file path can be specified.
The `.map` file is also automatically made available.

The URL paths to load the file and the local file paths are determined
during startup, and a direct 1-1 mapping,
avoiding potential path traversal attacks.

--- a/examples/custom-components/package.json
+++ b/examples/custom-components/package.json
@@ -5,8 +5,9 @@
   "description": "Example app using toolkit & custom components",
   "scripts": {
     "lint": "eslint . --max-warnings 0",
-    "build": "tsc --noEmit",
-    "start": "node --import=tsx --conditions=@arcanejs/source src"
+    "build": "tsc --noEmit && pnpm build:frontend",
+    "build:frontend": "rm -rf dist && esbuild src/frontend.tsx --bundle --sourcemap --outfile=dist/custom-entrypoint.js",
+    "start": "pnpm build:frontend && node --import=tsx --conditions=@arcanejs/source src"
   },
   "devDependencies": {
     "@arcanejs/eslint-config": "workspace:^",
@@ -15,15 +16,18 @@
     "@types/node": "^20.11.24",
     "@types/react": "^18",
     "eslint": "^8.57.0",
-    "tsup": "^8.1.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@arcanejs/protocol": "workspace:^",
     "@arcanejs/react-toolkit": "workspace:^",
     "@arcanejs/toolkit": "workspace:^",
+    "@arcanejs/toolkit-frontend": "workspace:^",
+    "esbuild": "^0.24.0",
     "pino": "^9.5.0",
     "pino-pretty": "^11.3.0",
     "react": "^18",
+    "styled-components": "^6.1.13",
     "tsx": "^4.19.1",
     "zod": "^3.23.8"
   }
