Introduce custom components (#86)
* Introduce backend changes for custom components

Make it possible to define custom component classes,
and use them with react-toolkit with a nice API.

* Refactor to make core components an extension

Rather than have the core components built in to the protocol & toolkit
packages, namespace all existing components under a new toolkit extension
called core.

This means that the core components are a concrete example of how the
toolkit can be extended with additional components for custom use-cases,
and also proves that the extensibility works.

* Allow custom frontend entrypoints to be used

To allow for custom components to be fully end-to-end usable,
it needs to be possible for users of this library to load their frontend
code into the browser, and register their renderer with arcane js.

To facilitate this, when starting the Toolkit,
a custom entrypoint.js file path can be specified.
The `.map` file is also automatically made available.

The URL paths to load the file and the local file paths are determined
during startup, and a direct 1-1 mapping,
avoiding potential path traversal attacks.

* Add changeset for custom components

* Correct readme for custom-components example

* Ensure that toolkit-frontend gets published

--- a/examples/custom-components/tsconfig.json
+++ b/examples/custom-components/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@arcanejs/typescript-config/react-library.json",
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "src/backend", "src/index.ts"]
+  "exclude": ["node_modules"]
 }
