--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -9,6 +9,7 @@
     "start": "node --import=tsx --conditions=@arcanejs/source",
     "start:button-adder": "pnpm start src/button-adder",
     "start:color-picker": "pnpm start src/color-picker",
+    "start:connections": "pnpm start src/connections",
     "start:controlled-vs-uncontrolled": "pnpm start src/controlled-vs-uncontrolled",
     "start:counter": "pnpm start src/counter",
     "start:data-file": "pnpm start src/data-file",
