--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -136,6 +136,7 @@
     "express": "^4.21.1",
     "lodash": "^4.17.21",
     "material-symbols": "^0.25.0",
+    "uuid": "^11.0.3",
     "ws": "^8.18.0"
   },
   "peerDependencies": {
